// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RuleResources renders with { url: 'test-url',
  guidanceLinks: [ { href: 'test-href' }, [length]: 1 ] } 1`] = `
<div
  className="ruleMoreResources"
>
  <div
    className="moreResourcesTitle"
  >
    Resources for this rule
  </div>
  <span
    className="ruleDetailsId"
  >
    <NewTabLink
      href="test-url"
    >
      More information about 
      some-rule
    </NewTabLink>
  </span>
  <span>
    <GuidanceLinks
      links={
        Array [
          Object {
            "href": "test-href",
          },
        ]
      }
    />
    <GuidanceTags
      deps={Object {}}
      links={
        Array [
          Object {
            "href": "test-href",
          },
        ]
      }
    />
  </span>
</div>
`;

exports[`RuleResources renders with { url: 'test-url', guidanceLinks: [ [length]: 0 ] } 1`] = `
<div
  className="ruleMoreResources"
>
  <div
    className="moreResourcesTitle"
  >
    Resources for this rule
  </div>
  <span
    className="ruleDetailsId"
  >
    <NewTabLink
      href="test-url"
    >
      More information about 
      some-rule
    </NewTabLink>
  </span>
  <span>
    <GuidanceLinks
      links={Array []}
    />
    <GuidanceTags
      deps={Object {}}
      links={Array []}
    />
  </span>
</div>
`;

exports[`RuleResources renders with { url: 'test-url', guidanceLinks: null } 1`] = `
<div
  className="ruleMoreResources"
>
  <div
    className="moreResourcesTitle"
  >
    Resources for this rule
  </div>
  <span
    className="ruleDetailsId"
  >
    <NewTabLink
      href="test-url"
    >
      More information about 
      some-rule
    </NewTabLink>
  </span>
  <span>
    <GuidanceLinks
      links={null}
    />
    <GuidanceTags
      deps={Object {}}
      links={null}
    />
  </span>
</div>
`;

exports[`RuleResources renders with { url: null,
  guidanceLinks: [ { href: 'test-href' }, [length]: 1 ] } 1`] = `
<div
  className="ruleMoreResources"
>
  <div
    className="moreResourcesTitle"
  >
    Resources for this rule
  </div>
  <span
    className="ruleDetailsId"
  >
    <NewTabLink
      href={null}
    >
      More information about 
      some-rule
    </NewTabLink>
  </span>
  <span>
    <GuidanceLinks
      links={
        Array [
          Object {
            "href": "test-href",
          },
        ]
      }
    />
    <GuidanceTags
      deps={Object {}}
      links={
        Array [
          Object {
            "href": "test-href",
          },
        ]
      }
    />
  </span>
</div>
`;

exports[`RuleResources renders with { url: null, guidanceLinks: [ [length]: 0 ] } 1`] = `null`;

exports[`RuleResources renders with { url: null, guidanceLinks: [ [length]: 0 ] } 2`] = `null`;
